--- a/src/Styles/variables.scss
+++ b/src/Styles/variables.scss
@@ -2,6 +2,8 @@
 $light-grey: #ccc;
 $dark-grey: #777;
 $white: #fff;
+$gold: rgb(253, 197, 0);
+$purple: rgb(92, 0, 153);
 
 // shadows
 $shadow-subtle: 0 0.5rem 0.75rem rgba(0, 0, 0, 0.6);
