--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -24,6 +24,19 @@
 			letter-spacing: 2px;
 			color: $white;
 			text-shadow: $shadow-subtle;
+			span.name {
+				font-size: 7rem;
+				color: transparent;
+				text-shadow: none;
+				filter: drop-shadow($shadow-subtle);
+				background-clip: text;
+				background-image: linear-gradient(
+					45deg,
+					$gold 0%,
+					$gold 50%,
+					$purple 50%
+				);
+			}
 		}
 		&__description {
 			font-size: 2.8rem;
