--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -8,11 +8,13 @@ body {
 * {
 	margin: 0;
 	padding: 0;
+	box-sizing: inherit;
 }
 html {
 	font-size: 62.5%;
 	scroll-behavior: smooth;
 	font-family: "Andika New Basic", sans-serif;
+	box-sizing: border-box;
 }
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
