--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -15,6 +15,7 @@ html {
 	scroll-behavior: smooth;
 	font-family: "Andika New Basic", sans-serif;
 	box-sizing: border-box;
+	overflow-x: hidden;
 }
 code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
