--- a/src/Styles/variables.scss
+++ b/src/Styles/variables.scss
@@ -2,8 +2,13 @@
 $light-grey: #ccc;
 $dark-grey: #777;
 $white: #fff;
-$gold: rgb(253, 197, 0);
-$purple: rgb(92, 0, 153);
+$gold: #fdc500;
+$purple: #5c0099;
+$orange: #f1551c;
+$twitter-blue: #1dcaff;
+$github-dark: #1c1f22;
+$insta-pink: #e1306c;
 
 // shadows
 $shadow-subtle: 0 0.5rem 0.75rem rgba(0, 0, 0, 0.6);
+$shadow-heavy: 0 0.6rem 1rem rgba(0, 0, 0, 0.85);
