--- a/src/Styles/Nav.scss
+++ b/src/Styles/Nav.scss
@@ -1,25 +1,59 @@
 @import "variables.scss";
 .nav {
-	position: absolute;
-	top: 0;
-	right: 0;
 	display: flex;
-	margin-top: 2rem;
-	margin-right: 2rem;
 	align-items: flex-end;
+	margin-top: 2rem;
+	animation: growLeft 0.25s ease-in;
+	margin-right: 2rem;
+	transition: width 0.25s ease-in;
+	background-color: $github-dark;
+	box-shadow: $shadow-subtle;
+	border-radius: 3rem;
+	padding-right: 4.5rem;
+	&:hover {
+		width: 100%;
+	}
 
 	&__item {
-		padding: 1rem 1.5rem;
-		margin: 0 1rem;
+		padding: 1.5rem 2.5rem;
 		color: $white;
 		font-size: 2rem;
 		cursor: pointer;
-		border: 2px solid transparent;
 		transition: all 0.2s ease-in;
+		border-radius: 3rem;
 		&:hover {
-			color: $gold;
-			border: 2px solid $gold;
+			color: $github-dark;
+			background-color: $light-grey;
 			transform: translateY(-3px);
 		}
+	}
+}
+
+.nav-container {
+	position: absolute;
+	top: 0;
+	right: 0;
+	transition: width 0.25s ease-in;
+	width: auto;
+	display: flex;
+	flex-direction: row-reverse;
+	align-items: flex-end;
+}
+.nav-menu {
+	position: absolute;
+	top: 0;
+	right: 0;
+	transform: translate(-50%, 50%);
+	border-radius: 50%;
+	z-index: 2;
+	box-shadow: $shadow-heavy;
+	color: $github-dark;
+	background-color: $light-grey;
+	padding: 1rem;
+	cursor: pointer;
+
+	svg.MuiSvgIcon-root {
+		display: inline-block;
+		font-size: 3rem;
 	}
 }
