about page setup

--- a/src/Styles/variables.scss
+++ b/src/Styles/variables.scss
@@ -8,6 +8,7 @@ $orange: #f1551c;
 $twitter-blue: #1dcaff;
 $github-dark: #1c1f22;
 $insta-pink: #e1306c;
+$trans-white: rgba(255, 255, 255, 0.75);
 
 // shadows
 $shadow-subtle: 0 0.5rem 0.75rem rgba(0, 0, 0, 0.6);
