--- a/src/Styles/About.scss
+++ b/src/Styles/About.scss
@@ -9,8 +9,8 @@
 	background-image: linear-gradient(
 			to right,
 			rgba($white, 0.75) 0%,
-			rgba($white, 0.75) 40%,
-			transparent 40%
+			rgba($white, 0.75) 60%,
+			transparent 60%
 		),
 		url("https://images.unsplash.com/photo-1459478309853-2c33a60058e7?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80");
 	border-radius: 4px;
@@ -21,9 +21,40 @@
 	box-shadow: $shadow-subtle;
 
 	&__left {
-		flex: 0.4;
+		flex: 0.6;
+		&--header {
+			font-size: 4rem;
+			color: $github-dark;
+			padding: 2rem;
+		}
+		&--content {
+			font-size: 1.8rem;
+			color: $dark-grey;
+			padding: 1rem;
+		}
 	}
 	&__right {
-		flex: 0.6;
+		flex: 0.4;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+
+		.MuiAvatar-root {
+			height: 25rem;
+			width: 25rem;
+			font-size: 4rem;
+			filter: drop-shadow($shadow-heavy);
+		}
+		.MuiAvatar-img {
+			object-fit: cover;
+			object-position: 70% center;
+			transform: scale(1.5);
+		}
+		.name {
+			font-size: 7rem;
+			text-shadow: $shadow-heavy;
+			color: $white;
+		}
 	}
 }
