--- a/src/Styles/variables.scss
+++ b/src/Styles/variables.scss
@@ -8,6 +8,7 @@ $orange: #f1551c;
 $twitter-blue: #1dcaff;
 $github-dark: #1c1f22;
 $insta-pink: #e1306c;
+$dark-red: #c70b0b;
 $trans-white: rgba(255, 255, 255, 0.75);
 
 // shadows
