--- a/src/Styles/animations.scss
+++ b/src/Styles/animations.scss
@@ -64,3 +64,13 @@
 		opacity: 1;
 	}
 }
+@keyframes alertOut {
+	0% {
+		opacity: 0;
+		transform: translate(-50%, 3rem);
+	}
+	100% {
+		opacity: 0.85;
+		transform: translate(-50%, -50%);
+	}
+}
