--- a/src/Styles/variables.scss
+++ b/src/Styles/variables.scss
@@ -6,6 +6,7 @@ $gold: #fdc500;
 $purple: #5c0099;
 $orange: #f1551c;
 $twitter-blue: #1dcaff;
+$linkedin-blue: #2867b2;
 $github-dark: #1c1f22;
 $insta-pink: #e1306c;
 $dark-red: #c70b0b;
