--- a/src/Styles/About.scss
+++ b/src/Styles/About.scss
@@ -60,6 +60,7 @@
 		.MuiAvatar-img {
 			object-fit: cover;
 			object-position: 70% center;
+			filter: contrast(1.3);
 			transform: scale(1.5);
 		}
 		.name {
