--- a/src/Styles/variables.scss
+++ b/src/Styles/variables.scss
@@ -15,3 +15,4 @@ $trans-white: rgba(255, 255, 255, 0.75);
 // shadows
 $shadow-subtle: 0 0.5rem 0.75rem rgba(0, 0, 0, 0.6);
 $shadow-heavy: 0 0.6rem 1rem rgba(0, 0, 0, 0.85);
+$shadow-mini: 0 0.2rem 0.25rem rgba(0, 0, 0, 0.75);
