--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -23,12 +23,12 @@
 			font-weight: 700;
 			letter-spacing: 2px;
 			color: $white;
-			text-shadow: $shadow-subtle;
+			text-shadow: $shadow-mini;
 			span.name {
 				font-size: 7rem;
 				color: transparent;
 				text-shadow: none;
-				filter: drop-shadow($shadow-subtle);
+				filter: drop-shadow($shadow-mini);
 				background-clip: text;
 				background-image: linear-gradient(
 					45deg,
@@ -42,6 +42,7 @@
 			font-size: 2.8rem;
 			color: $light-grey;
 			text-align: right;
+			text-shadow: $shadow-mini;
 		}
 	}
 }
