--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -9,6 +9,7 @@
 		url("https://images.unsplash.com/photo-1490274480207-c9140355abba?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
 	background-size: cover;
 	background-position-y: center;
+	background-position-x: center;
 	position: relative;
 	font-family: "Andika New Basic", sans-serif;
 
@@ -24,6 +25,13 @@
 			letter-spacing: 2px;
 			color: $white;
 			text-shadow: $shadow-mini;
+			@media only screen and (max-width: $bp-medium) {
+				font-size: 4.5rem;
+			}
+			@media only screen and (max-width: $bp-small) {
+				font-size: 3rem;
+				font-weight: 600;
+			}
 			span.name {
 				font-size: 7rem;
 				color: transparent;
@@ -36,6 +44,13 @@
 					$gold 50%,
 					$purple 50%
 				);
+				display: inline-block;
+				@media only screen and (max-width: $bp-medium) {
+					font-size: 5rem;
+				}
+				@media only screen and (max-width: $bp-small) {
+					font-size: 4.5rem;
+				}
 			}
 		}
 		&__description {
@@ -43,6 +58,12 @@
 			color: $light-grey;
 			text-align: right;
 			text-shadow: $shadow-mini;
+			@media only screen and (max-width: $bp-medium) {
+				font-size: 2rem;
+			}
+			@media only screen and (max-width: $bp-small) {
+				font-size: 1.6rem;
+			}
 		}
 	}
 }
