--- a/src/Styles/About.scss
+++ b/src/Styles/About.scss
@@ -4,7 +4,7 @@
 	padding: 2rem;
 	box-sizing: content-box;
 	overflow: hidden;
-	@media only screen and (max-width: $bp-medium) {
+	@media only screen and (max-width: $bp-large) {
 		padding: 0;
 	}
 }
@@ -62,6 +62,13 @@
 			@media only screen and (max-width: $bp-small) {
 				font-size: 2.5rem;
 			}
+			span {
+				font-size: 1.6rem;
+				color: $dark-grey;
+				@media only screen and (max-width: $bp-small) {
+					font-size: 1.2rem;
+				}
+			}
 		}
 		&--content {
 			font-size: 1.8rem;
@@ -104,15 +111,20 @@
 			animation-fill-mode: both;
 			filter: drop-shadow($shadow-heavy);
 			animation: fadeInFromLeft 0.6s ease-in;
-			@media only screen and (max-width: $bp-large) {
-				font-size: 3.5rem;
+			@media only screen and (max-width: $bp-largest) {
+				font-size: 3.75rem;
 				height: 20rem;
 				width: 20rem;
 			}
+			@media only screen and (max-width: $bp-large) {
+				font-size: 3.25rem;
+				height: 18rem;
+				width: 18rem;
+			}
 			@media only screen and (max-width: $bp-medium) {
 				font-size: 3rem;
-				height: 17rem;
-				width: 17rem;
+				height: 16rem;
+				width: 16rem;
 				align-self: center;
 			}
 			@media only screen and (max-width: $bp-small) {
@@ -133,6 +145,9 @@
 			animation-fill-mode: both;
 			color: $white;
 			animation: fadeInFromRight 0.6s ease-in;
+			@media only screen and (max-width: $bp-largest) {
+				font-size: 5rem;
+			}
 			@media only screen and (max-width: $bp-large) {
 				font-size: 4rem;
 			}
