--- a/src/Styles/About.scss
+++ b/src/Styles/About.scss
@@ -102,6 +102,7 @@
 		justify-content: center;
 		@media only screen and (max-width: $bp-small) {
 			justify-content: flex-start;
+			margin-top: 12rem;
 		}
 
 		.MuiAvatar-root {
