--- a/src/Styles/variables.scss
+++ b/src/Styles/variables.scss
@@ -10,6 +10,7 @@ $linkedin-blue: #2867b2;
 $github-dark: #1c1f22;
 $insta-pink: #e1306c;
 $dark-red: #c70b0b;
+$light-red: #ff5a5a;
 $trans-white: rgba(255, 255, 255, 0.75);
 
 // shadows
