--- a/src/Styles/Contact.scss
+++ b/src/Styles/Contact.scss
@@ -7,6 +7,7 @@
 	transform-origin: top;
 	animation-fill-mode: both;
 	top: 10rem;
+	z-index: 50;
 	right: 6rem;
 	flex-direction: column;
 	background-color: $light-grey;
